# PyCpp-Server

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
cpptests/: CMakeLists.txt  test_one.cpp  test_prime.cpp
cserv_api/: urls.py  views.py
include/cserv_core/: errors.hpp  one.hpp
python/: CMakeLists.txt
python/cxx/: CMakeLists.txt  cserv_pybind.cpp
python/pycserv/: __init__.py
server/: CMakeLists.txt  examples_calls.txt  manage.py  test_server.py  test_server_call.py  x.py
server/cserv/: asgi.py  settings.py  urls.py  wsgi.py
server/cserv_api/: CMakeLists.txt  apps.py  urls.py  views.py
src/: errors.cpp  one.cpp  prime.cpp  segfault.cpp
